--- a/components/Faq/Faq.module.scss
+++ b/components/Faq/Faq.module.scss
@@ -52,6 +52,7 @@
   -2px 0 2px #fff,
   0 -2px 2px #fff;
   cursor: pointer;
+  z-index: 100;
 
   //@media (min-width: $media-screen-notebook) {
   //  text-shadow: none;
