--- a/components/DotRing/DotRing.module.scss
+++ b/components/DotRing/DotRing.module.scss
@@ -1,3 +1,5 @@
+@import "styles/variables";
+
 .ring {
     position: fixed;
     top: 0;
@@ -14,6 +16,11 @@
     will-change: width, height, transform, border;
     z-index: 999;
     pointer-events: none;
+    display: none;
+
+    @media (min-width: $media-screen-notebook) {
+        display: flex;
+    }
 
 
     &:nth-child(1) {
