--- a/components/Intro/Header/Header.module.scss
+++ b/components/Intro/Header/Header.module.scss
@@ -3,7 +3,7 @@
 .header {
   display: flex;
   flex-flow: row wrap;
-  margin: 70px 40px 0;
+  padding: 70px 40px 0;
   justify-content: space-between;
   align-items: flex-start;
 
@@ -11,7 +11,7 @@
   @media (min-width: $media-screen-notebook) {
     flex-flow: row nowrap;
     align-items: center;
-    margin: 70px 100px 0;
+    padding: 70px 100px 0;
   }
 }
 
@@ -36,5 +36,13 @@
     line-height: 31px;
     text-transform: uppercase;
     margin-left: 10px;
+  }
+}
+
+.socialLink {
+  margin-left: auto!important;
+
+  @media (min-width: $media-screen-notebook) {
+    margin-left: 0!important;
   }
 }
