--- a/components/Intro/Content/Content.module.scss
+++ b/components/Intro/Content/Content.module.scss
@@ -141,6 +141,7 @@
 
         @media (min-width: $media-screen-notebook) {
             font-size: 47px;
+            text-align: right;
             width: auto;
         }
     }
@@ -153,9 +154,16 @@
         //box-shadow: 0 5px 13px rgba(0, 0, 0, 0.57);
 
         @media (min-width: $media-screen-notebook) {
-            margin: 40px auto 0;
-            width: 110px;
+            margin: 40px 0 0 auto;
+            width: 227px;
             height: auto;
         }
+    }
+}
+
+.button {
+
+    @media (min-width: $media-screen-notebook) {
+        margin: 50px 0 0 auto;
     }
 }
