--- a/components/Intro/Header/Header.module.scss
+++ b/components/Intro/Header/Header.module.scss
@@ -39,10 +39,10 @@
   }
 }
 
-.socialLink {
-  margin-left: auto!important;
-
-  @media (min-width: $media-screen-notebook) {
-    margin-left: 0!important;
-  }
-}
+//.socialLink {
+//  margin-left: auto!important;
+//
+//  @media (min-width: $media-screen-notebook) {
+//    margin-left: 0!important;
+//  }
+//}
