--- a/components/ButtonOnIntro/ButtonOnIntro.module.scss
+++ b/components/ButtonOnIntro/ButtonOnIntro.module.scss
@@ -6,7 +6,7 @@
     z-index: 1000;
 
     @media (min-width: $media-screen-notebook) {
-        margin: 50px auto 0;
+        margin-top: 50px;
     }
 }
 
