--- a/components/Intro/Intro.module.scss
+++ b/components/Intro/Intro.module.scss
@@ -7,8 +7,9 @@
 
   @media (min-width: $media-screen-notebook) {
     //padding-bottom: 100px;
-    padding-bottom: 300px;
-    background: url('/images/background-gradient.png') no-repeat 100% 100% / cover;
+    //padding-bottom: 300px;
+    padding-bottom: 100px;
+    background: url('/images/background-v2.png') no-repeat 100% 100% / cover;
   }
 }
 
@@ -21,7 +22,7 @@
   height: 100%;
   display: none;
   overflow: hidden;
-  z-index: -1;
+  z-index: 1;
 
   @media (min-width: $media-screen-notebook) {
     display: flex;
@@ -52,5 +53,45 @@
     }
 
 
+  }
+}
+
+.supportedWallets {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: center;
+  margin-top: 90px;
+
+  @media (min-width: $media-screen-notebook) {
+    flex-flow: row nowrap;
+  }
+
+  .name {
+    font-size: 32px;
+  }
+
+  .wallets {
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    margin-top: 15px;
+
+    @media (min-width: $media-screen-notebook) {
+      flex-flow: row nowrap;
+      margin-left: 40px;
+      margin-top: 0;
+    }
+  }
+
+  .wallet {
+
+    &:first-child {
+      height: 32px;
+    }
+
+    &:last-child {
+      margin-left: 60px;
+    }
   }
 }
