change margin-left button on intro

--- a/components/Intro/Content/Content.module.scss
+++ b/components/Intro/Content/Content.module.scss
@@ -164,6 +164,6 @@
 .button {
 
     @media (min-width: $media-screen-notebook) {
-        margin: 50px 0 0 auto;
+        margin: 50px 0 0 auto!important;
     }
 }
