--- a/components/Info/Info.module.scss
+++ b/components/Info/Info.module.scss
@@ -1,13 +1,14 @@
 @import "/styles/variables";
 
 .info {
-  margin-top: 200px;
+  margin-top: 85px;
   width: 100%;
   display: flex;
   flex-flow: column nowrap;
 
   @media (min-width: $media-screen-notebook) {
-    margin-top: 130px;
+    //margin-top: 130px;
+    margin-top: 0;
   }
 }
 
