--- a/components/Info/KeyFeatures/KeyFeatures.module.scss
+++ b/components/Info/KeyFeatures/KeyFeatures.module.scss
@@ -1,4 +1,5 @@
 @import "/styles/variables";
+@import "/styles/mixins";
 
 .features {
   width: 100%;
@@ -20,10 +21,12 @@
 
 .featuresItems {
   display: flex;
-  flex-flow: column nowrap;
+  flex-flow: row wrap;
   max-width: 500px;
   width: 100%;
   margin: 0 auto;
+  //justify-content: space-between;
+  justify-content: center;
 
   @media (min-width: $media-screen-notebook) {
     flex-flow: row nowrap;
@@ -36,49 +39,87 @@
 
 .featuresItem {
   display: flex;
-  align-items: center;
   flex-flow: column nowrap;
-  align-self: flex-start;
-  margin-bottom: -30px;
+  width: 45%;
+  justify-content: center;
+  align-items: center;
+
+  &:nth-child(3) {
+    .image {
+      width: 50%;
+    }
+  }
+
 
   @media (min-width: $media-screen-notebook) {
     margin-bottom: 0;
+
+
+    align-items: center;
+    flex-flow: column nowrap;
+    align-self: flex-start;
+    margin-bottom: -30px;
   }
 
   &:first-child {
-    margin-top: 45px;
+    //margin-top: 5px;
     margin-bottom: 0;
   }
 
+  //&:nth-child(even) {
+  //  margin-left: -40px;
+  //
+  //  @media (min-width: $media-screen-notebook) {
+  //    margin-left: 0;
+  //  }
+  //};
+
   &:nth-child(even) {
-    margin-left: -40px;
+    align-self: flex-end;
+    margin-left: 25px;
 
     @media (min-width: $media-screen-notebook) {
       margin-left: 0;
     }
-  };
-
-  &:nth-child(odd) {
-    align-self: flex-end;
   }
 
   .image {
-    width: 30%;
+    //width: 35%;
+    width: 70%;
     height: auto;
-    border: 5px solid #000;
+    //border: 5px solid #000;
+
+
 
     @media (min-width: $media-screen-notebook) {
-      width: 60%;
+
+      &:nth-child(1) {
+        width: 184px;
+      }
+
+      &:nth-child(2) {
+        width: 179px;
+      }
+
+      &:nth-child(3) {
+        width: 145px;
+      }
+
+      &:nth-child(4) {
+        width: 177px;
+      }
+
+      &:nth-child(5) {
+        width: 199px;
+      }
     }
   }
 
   .name {
     font-size: 25px;
-    text-shadow: 1px 0 1px #fff,
-    0 1px 1px #fff,
-    -1px 0 1px #fff,
-    0 -1px 1px #fff;
+    @include stroke(#fff, 1px);
     margin-top: 20px;
+    text-align: center;
 
     @media (min-width: $media-screen-notebook) {
      font-size: 30px;
