--- a/components/Intro/Intro.module.scss
+++ b/components/Intro/Intro.module.scss
@@ -6,9 +6,8 @@
   position: relative;
 
   @media (min-width: $media-screen-notebook) {
-    //padding-bottom: 100px;
-    //padding-bottom: 300px;
     padding-bottom: 100px;
+    //padding-bottom: 300px;
     background: url('/images/background-v2.png') no-repeat 100% 100% / cover;
   }
 }
@@ -56,19 +55,23 @@
   }
 }
 
+
 .supportedWallets {
-  display: flex;
-  flex-flow: column nowrap;
-  justify-content: center;
-  align-items: center;
-  margin-top: 90px;
+
+  display: none;
 
   @media (min-width: $media-screen-notebook) {
     flex-flow: row nowrap;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    //margin-top: 90px;
+    margin-top: 50px;
   }
 
   .name {
     font-size: 32px;
+    white-space: nowrap;
   }
 
   .wallets {
@@ -84,14 +87,22 @@
     }
   }
 
-  .wallet {
-
-    &:first-child {
-      height: 32px;
-    }
+  svg {
+    margin-right: 40px;
 
     &:last-child {
-      margin-left: 60px;
+      margin-right: 0;
     }
   }
+
+  //.wallet {
+  //
+  //  &:first-child {
+  //    height: 32px;
+  //  }
+  //
+  //  &:last-child {
+  //    margin-left: 60px;
+  //  }
+  //}
 }
