--- a/components/Popup/PopupConnectWallet/PopupConnectWallet.module.scss
+++ b/components/Popup/PopupConnectWallet/PopupConnectWallet.module.scss
@@ -3,16 +3,17 @@
 .popup {
   width: 100%;
   max-width: 426px;
-  height: 395px;
+  height: auto;
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
+  padding-bottom: 30px;
   //justify-content: center;
 
   @media (min-width: $media-screen-notebook) {
-    width: 529px;
-    max-width: 529px;
-    height: 385px;
+    width: 550px;
+    max-width: 550px;
+    height: 455px;
   }
 }
 
@@ -23,8 +24,15 @@
 
 .buttons {
   display: flex;
-  flex-flow: column nowrap;
-  margin-top: 35px;
+  //flex-flow: column nowrap;
+  flex-flow: row wrap;
+  //justify-content: space-between;
+  //align-items: center;
+  margin-top: 20px;
+  max-width: 470px;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
 }
 
 .button {
@@ -33,7 +41,16 @@
   background-color: #B0D28E;
   display: flex;
   border: 4px solid #9C8060;
-  margin-bottom: 25px;
+  margin-bottom: 15px;
+
+
+  @media (min-width: $media-screen-notebook) {
+    &:nth-child(2),
+    &:nth-child(4) {
+      margin-left: 20px;
+    }
+  }
+
 
   &:last-child {
     margin-bottom: 0;
@@ -47,6 +64,8 @@
   &.active {
     background-color: #739650;
   }
+
+
 
   .text {
     font-size: 32px;
