--- a/components/ButtonConnectWallet/ButtonConnectWallet.module.scss
+++ b/components/ButtonConnectWallet/ButtonConnectWallet.module.scss
@@ -49,9 +49,9 @@
     margin: auto;
     font-size: 22px;
 
-    @media (min-width: $media-screen-notebook) {
-      font-size: 32px;
-    }
+    //@media (min-width: $media-screen-notebook) {
+    //  font-size: 32px;
+    //}
   }
 }
 
