--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -11,6 +11,12 @@ a {
   z-index: 20;
 }
 
+//svg path {
+//  stroke: inherit;
+//  stroke-width: inherit;
+//  fill: inherit;
+//}
+
 *,
 *:before,
 *:after {
