--- a/components/Intro/Intro.module.scss
+++ b/components/Intro/Intro.module.scss
@@ -6,8 +6,8 @@
   position: relative;
 
   @media (min-width: $media-screen-notebook) {
-    padding-bottom: 100px;
-    //padding-bottom: 300px;
+    padding-bottom: 300px;
+    //margin-bottom: -250px;
     background: url('/images/background-v2.png') no-repeat 100% 100% / cover;
   }
 }
@@ -57,16 +57,17 @@
 
 
 .supportedWallets {
-
+  width: 1000px;
+  justify-content: space-between;
+  align-items: center;
   display: none;
+  flex-flow: row nowrap;
+  //margin-top: 90px;
+  margin: 50px auto 0;
 
   @media (min-width: $media-screen-notebook) {
-    flex-flow: row nowrap;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    //margin-top: 90px;
-    margin-top: 50px;
+
   }
 
   .name {
