--- a/components/Options/Options.module.scss
+++ b/components/Options/Options.module.scss
@@ -88,10 +88,11 @@
 
     &:nth-child(1) {
         .image {
-            width: 187px;
+            width: 202px;
             height: auto;
-            margin-bottom: 20px;
-            border: 5px solid #000;
+            margin-bottom: 5px;
+            mask-image: url('/images/option-1.png')
+            //border: 5px solid #000;
         }
     }
 
