--- a/components/Info/KeyFeatures/KeyFeatures.module.scss
+++ b/components/Info/KeyFeatures/KeyFeatures.module.scss
@@ -15,7 +15,7 @@
 
 
   @media (min-width: $media-screen-notebook) {
-    height: 440px;
+    height: 425px;
   }
 }
 
@@ -33,7 +33,7 @@
     width: 100%;
     max-width: 100%;
     justify-content: space-between;
-    padding: 70px 100px;
+    padding: 40px 100px 70px 100px;
   }
 }
 
@@ -49,6 +49,31 @@
       width: 50%;
     }
   }
+
+  @media (min-width: $media-screen-notebook) {
+
+    &:nth-child(1) {
+      .image {width: 184px;}
+    }
+
+    &:nth-child(2) {
+      .image {width: 179px;}
+    }
+
+    &:nth-child(3) {
+      .image {width: 145px;}
+    }
+
+    &:nth-child(4) {
+      .image {width: 177px;}
+    }
+
+    &:nth-child(5) {
+      .image {width: 199px;}
+    }
+  }
+
+
 
 
   @media (min-width: $media-screen-notebook) {
@@ -89,30 +114,6 @@
     height: auto;
     //border: 5px solid #000;
 
-
-
-    @media (min-width: $media-screen-notebook) {
-
-      &:nth-child(1) {
-        width: 184px;
-      }
-
-      &:nth-child(2) {
-        width: 179px;
-      }
-
-      &:nth-child(3) {
-        width: 145px;
-      }
-
-      &:nth-child(4) {
-        width: 177px;
-      }
-
-      &:nth-child(5) {
-        width: 199px;
-      }
-    }
   }
 
   .name {
